--- a/roles/sbctl/defaults/main.yml
+++ b/roles/sbctl/defaults/main.yml
@@ -1,14 +1,20 @@
 ---
 
+chroot_path: ""
+
+kernel_params: ""
+
 esp_mount: "/boot"
 esp_disk: "/dev/nvme0n1"
 esp_part: "1"
 
 boot_mount: "{{ esp_mount }}"
 sbctl_ucode: "intel-ucode.img"
-sbctl_cmdline: "/usr/share/secureboot/cmdline"
+sbctl_cmdline: "{{ chroot_path }}/usr/share/secureboot/cmdline"
 sbctl_enroll: true
 sbctl_enroll_microsoft: false
 sbctl_sign_files: []
 efistub_splash: "/usr/share/systemd/bootctl/splash-arch.bmp"
 sbctl_bundles: []
+
+sbctl_uefi_add: true
