--- a/roles/locale_conf/tasks/main.yml
+++ b/roles/locale_conf/tasks/main.yml
@@ -2,18 +2,18 @@
 
 - name: Enable locales
   become: true
-  replace:
-    path: /etc/locale.gen
+  ansible.builtin.replace:
+    path: "{{ chroot_path }}/etc/locale.gen"
     regexp: '^#?({{ item | regex_escape() }}.*)$'
     replace: '\1'
   loop: "{{ locale_gen }}"
-  notify: generate locales
+  notify: Generate locales
 
 - name: Configure locale.conf
   become: true
-  template:
+  ansible.builtin.template:
     src: "locale.conf.j2"
-    dest: "/etc/locale.conf"
+    dest: "{{ chroot_path }}/etc/locale.conf"
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
