--- a/roles/hostname/tasks/main.yml
+++ b/roles/hostname/tasks/main.yml
@@ -3,18 +3,19 @@
 - name: Set hostname
   ansible.builtin.hostname:
     name: "{{ hostname }}"
+  when: not chroot_path
 
 - name: Configure /etc/hostname
   ansible.builtin.copy:
     content: "{{ hostname }}{{ '\n' }}"
-    dest: /etc/hostname
+    dest: "{{ chroot_path }}/etc/hostname"
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
 
 - name: Set hostname in /etc/hosts  # noqa no-tabs
   ansible.builtin.lineinfile:
-    dest: /etc/hosts
+    dest: "{{ chroot_path }}/etc/hosts"
     regexp: '^#?127\.0\.1\.1'
     line: "127.0.1.1\t{{ hostname }}"
   when: hostname_configure_etc_hosts
