--- a/roles/systemd_networkd/handlers/main.yml
+++ b/roles/systemd_networkd/handlers/main.yml
@@ -1,5 +1,7 @@
 ---
+
 - name: Restart systemd-networkd
-  systemd:
+  ansible.builtin.systemd:
     name: systemd-networkd.service
     state: restarted
+  when: not chroot_path
