--- a/inventory/group_vars/gui/vars.yml
+++ b/inventory/group_vars/gui/vars.yml
@@ -13,3 +13,5 @@ prometheus_blackbox_icmp_targets: []
 
 pip_i3_packages:
   - dbus_next  # Used by various bar modules
+
+network_manager: "{{ 'systemd-networkd' if desktop_environment in ['i3', 'sway'] else 'NetworkManager' }}"
