Exclude podman from dnf-automatic for Ceph cluster
Move dnf_automatic_excludes to ceph group_vars.
Make ceph group higher priority than servers, overriding its vars.

--- a/inventory/group_vars/ceph/vars.yml
+++ b/inventory/group_vars/ceph/vars.yml
@@ -5,3 +5,12 @@ prometheus_node_labels:
   instance: "{{ inventory_hostname }}"
 
 fstrim_timer_enabled: true
+
+dnf_automatic_excludes:
+  - "kernel*"
+  - "kmod*"
+  - "systemd*"
+  - "libvirt*"
+  - "qemu*"
+  - "podman*"
+  - "container*"
